--- a/src/components/BarProfile/BarProfile.css
+++ b/src/components/BarProfile/BarProfile.css
@@ -3,7 +3,7 @@
   /* flex-wrap: wrap; */
   flex-direction: row;
   width: 50%;
-  margin: auto;
+  margin: 50px auto 100px auto;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .block-ava {
