--- a/src/components/CardCourse/CardCourse.css
+++ b/src/components/CardCourse/CardCourse.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   width: 40%;
+  margin: 10px;
+  background-color: gainsboro;
 }
 .card-video {
   margin: 20px;
