--- a/src/components/CardCourse/CardCourse.css
+++ b/src/components/CardCourse/CardCourse.css
@@ -3,7 +3,9 @@
   flex-direction: row;
   width: 40%;
   margin: 10px;
-  background-color: gainsboro;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
 }
 .card-video {
   margin: 20px;
