--- a/src/components/BarProfile/BarProfile.css
+++ b/src/components/BarProfile/BarProfile.css
@@ -6,6 +6,12 @@
   margin: 50px auto 100px auto;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+@media screen and (max-width: 768px) {
+  .bar-profile {
+    flex-direction: column;
+    align-content: center;
+  }
+}
 .block-ava {
   width: 30%;
 }
