--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -7,3 +7,9 @@
   flex-direction: row;
   justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  .block-card {
+    flex-direction: column;
+    align-content: center;
+  }
+}
