--- a/src/components/BarProfile/BarProfile.css
+++ b/src/components/BarProfile/BarProfile.css
@@ -27,8 +27,12 @@
 }
 .block-data {
   text-align: start;
-  width: 50%;
+  width: 100%;
 }
 .block-data h4 {
   font-weight: 200;
+  margin-top: 2px;
+}
+.block-data h3 {
+  margin-bottom: 0;
 }
